--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,6 +11,7 @@
 
 body {
   margin: 2rem;
+  background-color: rgba(16, 80, 133, 0.5);
 }
 
 #task-input-section {
@@ -77,7 +78,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f8f8f8;
+  background-color: rgba(16, 80, 133, 0.1);
   padding: 1.2rem;
   margin-bottom: 1.2rem;
 }
