--- a/frontend/css/signup.css
+++ b/frontend/css/signup.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #5977b4;
+  background: linear-gradient(to right, #43cea2, #185a9d);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,44 +17,85 @@ body {
 }
 
 .form-card {
-  background-color: rgba(6, 102, 78, 0.288);
+  background: white;
   border-radius: 1rem;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
   padding: 2.5rem 1.8rem;
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
+  animation: slideUp 0.6s ease;
+}
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .form-card input {
   padding: 1.1rem;
   font-size: 16px;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 0.3rem;
   transition: border 0.2s ease;
 }
 
 .form-card input:focus {
-  border-color: #3b82f6;
+  border-color: #43cea2;
   outline: none;
 }
 
 button {
-  padding: 1.2rem;
-  background-color: #3b82f6;
+  padding: 0.8rem;
+  background: #43cea2;
   color: white;
   font-weight: bold;
   border: none;
-  border-radius: 0.9rem;
+  border-radius: 8px;
   cursor: pointer;
   transition: background 0.2s ease;
 }
 
 button:hover {
-  background: #2563eb;
+  background: #379b82;
 }
 
 #message {
-  font-size: 1.2rem;
+  font-size: 14px;
   color: red;
+}
+
+.password-wrapper {
+  position: relative;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 18px;
+  color: #aaa;
+}
+
+.redirect {
+  font-size: 14px;
+}
+
+.redirect a {
+  color: #185a9d;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.redirect a:hover {
+  text-decoration: underline;
 }
