--- a/frontend/views/verify.html
+++ b/frontend/views/verify.html
@@ -29,12 +29,13 @@
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
         const code = document.getElementById("vCode").value;
+        const email = localStorage.getItem("verifyEmail");
 
         // Sending the code to server for matching with db code
         const response = await fetch("http://localhost:5000/api/auth/verify", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ code }),
+          body: JSON.stringify({ email, code }),
         });
 
         const result = await response.json();
