--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -72,7 +72,12 @@
           <div class="task-form-wrapper">
             <!-- Left: Task Input -->
             <div id="task-input-section">
-              <input type="text" id="taskInput" placeholder="Enter a task" />
+              <input
+                type="text"
+                maxlength="100"
+                id="taskInput"
+                placeholder="Enter a task"
+              />
               <button id="addTaskBtn">Add Task</button>
             </div>
 
@@ -109,7 +114,7 @@
       </template>
     </div>
 
-    <script type="module" src="../js/dashboard.js"></script>
-    <script type="module" src="../js/app.js"></script>
+    <script src="../js/dashboard.js" type="module"></script>
+    <script src="../js/app.js" type="module"></script>
   </body>
 </html>
