feat: add completed tasks UI script to HTML

--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -92,13 +92,13 @@
       </template>
 
       <template id="allTasks-template">
-        <h2>All Task</h2>
+        <h2>All Tasks</h2>
         <ul id="taskList"></ul>
       </template>
 
       <template id="completed-template">
-        <h2>Completed Template</h2>
-        <ul id="taskList"></ul>
+        <h2>Completed Tasks</h2>
+        <ul id="completedTasks"></ul>
       </template>
 
       <template id="pending-template">
@@ -113,5 +113,6 @@
     </div>
 
     <script src="../js/dashboard.js" type="module"></script>
+    <script src="../js/features/completed/ui.js" type="module"></script>
   </body>
 </html>
