--- a/frontend/css/dashboard.css
+++ b/frontend/css/dashboard.css
@@ -253,3 +253,26 @@ body {
   border-color: #2563eb;
   box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.3);
 }
+
+/* Completed-Task  */
+.completed-task {
+  margin-top: 20px;
+  background-color: #f3f4f6;
+  color: #6b7280;
+  text-decoration: line-through;
+  padding: 12px 16px;
+  margin-bottom: 8px;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.completed-task:hover {
+  background-color: #e5e7eb;
+  cursor: pointer;
+}
