--- a/frontend/css/dashboard.css
+++ b/frontend/css/dashboard.css
@@ -276,3 +276,27 @@ body {
   background-color: #e5e7eb;
   cursor: pointer;
 }
+
+/* Pending Task */
+.pending-task {
+  margin-top: 20px;
+  background-color: white;
+  color: #92400e;
+  padding: 12px 16px;
+  margin-bottom: 8px;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+}
+
+.pending-task:hover {
+  background-color: #fef9c3;
+  transform: translateY(-2px);
+  cursor: pointer;
+}
