feat(template): add pending-task and setting templates for dynamic rendering

--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -102,13 +102,12 @@
       </template>
 
       <template id="pending-template">
-        <h2>Pending Template</h2>
-        <p>This is pending Template</p>
+        <h2>Pending Tasks</h2>
+        <ul id="pendingTasks"></ul>
       </template>
 
       <template id="setting-template">
-        <h2>This is setting template</h2>
-        <p>This is setting template</p>
+        <h1>Comming Soon ...</h1>
       </template>
     </div>
 
