feat(design): add link of Modal.css file

--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard | Task Manager</title>
     <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/modal.css" />
   </head>
   <body>
     <div class="container">
